[package]
name = "web_svg2gcode"
version = "0.1.0"
edition = "2021"
description = "Simple web bridge for svg to gcode encoding"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
svg2gcode = "0.1.3"
svgtypes = "0.11"
roxmltree = "0.18"
g-code = "0.3"

