[package]
name = "supply-chain-in-chrome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
tungstenite = "0.28.0"
url = "2.3.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"